[package]
name = "catwrt-update"
version = "0.1.0"
edition = "2021"
authors = ["timochan <teemo@timochan.cn>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
